# book-recommendation-system

./: .gitignore  README.md  config.yaml  pyproject.toml
.virtual_documents/notebooks/: 01_web_scraping_goodreads.ipynb  02_web_scraping_goodreads_part2.ipynb.ipynb  03_book_features_clustering.ipynb  04_book_enrichment_goodreads.ipynb  05_streamlit_app.ipynb  Untitled.ipynb
app/: app.py
data/clean/: books_clean_1000.csv  books_clean_backup.csv  books_clean_enriched_1000.csv  books_clean_enriched_497_clean.csv  books_clustered_final.csv  books_clustered_final_enriched.csv  books_final_1000.csv  books_final_enriched.csv  cluster_summary.csv  cluster_summary_detailed.csv  kmeans_metrics.csv  kmeans_metrics_fixed.csv
data/raw/: goodreads_best_books.html  goodreads_books_6_to_10.csv  goodreads_books_6_to_12.csv  temp_books_meta_backup.csv  temp_prices_checkpoint.csv
notebooks/: 01_web_scraping_goodreads.ipynb  02_web_scraping_goodreads_part2.ipynb.ipynb  03_book_features_clustering.ipynb  04_book_enrichment_goodreads.ipynb  05_streamlit_app.ipynb  functions.py
notebooks/data/clean/: books_clean_backup.csv
visualizations/: cluster_centroids_summary.csv
